--- a/src/pug/components/residential-overview.pug
+++ b/src/pug/components/residential-overview.pug
@@ -1,13 +1,13 @@
-section.real-estate.residential-overview
-  .container
-    article.real-estate__residential
+section.real-estate.residential-overview(itemscope, itemtype='http://schema.org/Residence')
+  .container(itemscope, itemtype='http://schema.org/Offer')
+    article.real-estate__residential(itemscope, itemtype='http://schema.org/Place')
       .row
         .image-wrapper
           .residential-overview__img
-            img(src="img/residential-overview.jpg", alt="Grand Palace - комфортний житловий комплекс")
-        .short-description.col
-          h2.short-description__title.title
-            span.head-line Cучасний комфортний житловий комплекс
-          p.short-description__text Це місце, де ви зможете жити, працювати, відпочивати, займатися спортом та ходити на шопінг, не полишаючи свого житла.
-          p.short-description__text Закритий внутрішній двір з розпланованими зонами відпочинку та дитячими майданчиками прийдуться до смаку усім хто цінує затишок, який так необхідний у великому місті.
-          p.short-description__text Для вашої зручності ми будуємо підземний паркінг.
+            img(src='img/residential-overview.jpg', alt='Grand Palace - комфортний житловий комплекс', itemprop='image' title="Сучасний комфортний житловий комплекс Grand Palace")
+        .short-description.col(itemprop='description')
+          h2.short-description__title.title(itemprop='name')
+            span.head-line Сучасний комфортний житловий комплекс
+          p.short-description__text(itemprop='description') Це місце, де ви зможете жити, працювати, відпочивати, займатися спортом та ходити на шопінг, не полишаючи свого житла.
+          p.short-description__text(itemprop='description') Закритий внутрішній двір з розпланованими зонами відпочинку та дитячими майданчиками прийдуться до смаку усім хто цінує затишок, який так необхідний у великому місті.
+          p.short-description__text(itemprop='description') Для вашої зручності ми будуємо підземний паркінг.
