--- a/src/pug/ru/residential.pug
+++ b/src/pug/ru/residential.pug
@@ -1,14 +1,31 @@
 doctype html
 html(lang="uk")
   head
+    //- Мета-конфігурації
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title Grand Palace - житлова нерухомість у місті Хмельницький
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    link(rel="stylesheet" href="/css/styles.css")
+    link(rel="stylesheet" href="../css/styles.css")
+    meta(property="og:url" content="#")
+    link(rel='canonical' href='#') 
+
+    //- 
+    meta(name="author" content="Grand Palace")
+    meta(name="publisher" content="Grand Palace")  
+    //- Шрифти
+    link(rel='preconnect' href='https://fonts.googleapis.com')
+    link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
+    link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
+    //- Favicon
+    link(rel='icon' href='img/favicon.ico')
+    //- Мета опис
+    title Grand Palace - жилая недвижимость в городе Хмельницкий
+    meta(name="keywords" content="центр, grand, palace, здоровье, строительство, недвижимость, ТРЦ, гранд, палас")
+    meta(name="description" content="Жилой комплекс Grand Palace предоставит вам возможность жить, работать, отдыхать, заниматься спортом и другими повседневными вещами, не покидая своего жилья!")
+    meta(property="og:description" content="Жилой комплекс Grand Palace создаст вам условия, где вы сможете жить, работать, отдыхать, заниматься спортом и выполнять другие повседневные дела, не покидая своего жилья.")
+    meta(property="og:title" content="Grand Palace - жилая недвижимость в городе Хмельницкий")
+    meta(property="og:image" content="img/logo.jpg")
+    meta(property="og:type" content="website")
 
   body(tabindex="0")
     .body-wrapper
