--- a/src/pug/ru/components/residential-hero.pug
+++ b/src/pug/ru/components/residential-hero.pug
@@ -1,2 +1,2 @@
-section.hero.hero-residential
-  h1.tagline Жилая недвижимость
+section.hero.hero-residential(itemscope itemtype="http://schema.org/Residence")
+  h1.tagline(itemprop="name") Жилая недвижимость
