кнопка усі новини

--- a/src/pug/one-news.pug
+++ b/src/pug/one-news.pug
@@ -46,7 +46,7 @@ html(lang="uk")
                         p.td Або телефонуйте
                         p 
                             a(href="tel:+380980555500")  (098) 055 55 00
-                a.short-description__btn.btn(href="#") усі новини
+                a.short-description__btn.btn(href="news.html") усі новини
 
     script(src="js/scripts.js")
     include components/footer
