--- a/src/pug/components/commercial-overview.pug
+++ b/src/pug/components/commercial-overview.pug
@@ -4,7 +4,7 @@ section.real-estate.commercial-overview
       .row
         .image-wrapper
           .residential-overview__img
-            img(src="img/commercial-overview.jpg" alt="")
+            img(src="img/commercial-overview.jpg" alt="Комерційні приміщення під та офіси")
         .short-description.col
           h2.short-description__title.title
             span.head-line Розпочни свій бізнес разом з grand&nbsp;palace
@@ -16,7 +16,7 @@ section.comercial-galery.container
     .picture-galery 
       picture 
         sourse(srcset="img/galery1.jpg" type="image/jpg")
-        img(src="img/galery1.webp", alt="")
+        img(src="img/galery1.webp", alt="Зручна парковка біля комерційних приміщень")
     .text-block-galery
       .number 01
       p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
@@ -24,7 +24,7 @@ section.comercial-galery.container
     .picture-galery 
         picture 
           sourse(srcset="img/galery2.jpg" type="image/jpg")
-          img(src="img/galery2.webp", alt="")
+          img(src="img/galery2.webp", alt="Особистий паркінг для мешканців ЖК Гранд Палац")
     .text-block-galery
       .number 02
       p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
@@ -32,7 +32,7 @@ section.comercial-galery.container
     .picture-galery 
         picture 
           sourse(srcset="img/galery3.jpg" type="image/jpg")
-          img(src="img/galery3.webp", alt="")
+          img(src="img/galery3.webp", alt="Чудові краєвиди на місто")
     .text-block-galery
       .number 03
       p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
@@ -40,7 +40,7 @@ section.comercial-galery.container
     .picture-galery 
         picture 
           sourse(srcset="img/galery4.jpg" type="image/jpg")
-          img(src="img/galery4.webp", alt="")
+          img(src="img/galery4.webp", alt="Панорамні вікна з красивими краєвидами міста")
     .text-block-galery
       .number 04
       p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
