--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -38,10 +38,10 @@ section.hero
           span.text Використання даху для прогулянкових зон відпочинку.
         a.open-popap.short-description__btn.btn(href="#") Отримати більше інформації
   .slider-images 
-    img(src="img/hero1.webp", alt="", loading="lazy")
-    img(src="img/hero.jpg", alt="")
-    img(src="img/hero2.webp", alt="", loading="lazy")
-    img(src="img/hero3.webp", alt="", loading="lazy")
-    img(src="img/hero4.webp", alt="", loading="lazy")
-    img(src="img/hero5.webp", alt="", loading="lazy")
-    img(src="img/hero6.webp", alt="", loading="lazy")
+    img(src="img/hero1.webp", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
+    img(src="img/hero.jpg", alt="Сучасний ТРЦ Grand Palce")
+    img(src="img/hero2.webp", alt="Зручний паркінг біля ТРЦ Grand Palace", loading="lazy")
+    img(src="img/hero3.webp", alt="Проекція нового ТРЦ Grand Palace", loading="lazy")
+    img(src="img/hero4.webp", alt="Житлові квартири в Grand Palace", loading="lazy")
+    img(src="img/hero5.webp", alt="Загальний план будівництва - вигляд ззовні", loading="lazy")
+    img(src="img/hero6.webp", alt="загальний вигляд Елітного ЖК Grand Palace", loading="lazy")
