--- a/src/pug/components/news-list.pug
+++ b/src/pug/components/news-list.pug
@@ -1,5 +1,5 @@
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!1
         ul
@@ -9,7 +9,7 @@ figure.news
         .news-btn
             a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!2
         ul
@@ -19,7 +19,7 @@ figure.news
         .news-btn
             a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!3
         ul
@@ -29,7 +29,7 @@ figure.news
         .news-btn
             a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!4
         ul
@@ -39,7 +39,7 @@ figure.news
         .news-btn
             a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!5
         ul
@@ -49,7 +49,7 @@ figure.news
         .news-btn
             a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!6
         ul
@@ -59,7 +59,7 @@ figure.news
         .news-btn
             a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!7
         ul
@@ -69,7 +69,7 @@ figure.news
         .news-btn
             a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!8
         ul
@@ -79,7 +79,7 @@ figure.news
         .news-btn
             a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!9
         ul
@@ -89,7 +89,7 @@ figure.news
         .news-btn
             a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!10
         ul
@@ -99,7 +99,7 @@ figure.news
         .news-btn
             a(href="one-news.html").documentation-item__btn.btn Детальніше 
 figure.news 
-    img(src="img/news-picture-1.jpg", alt="")
+    img(src="img/news-picture-1.jpg", alt="Нове житло та комерційне приміщення від Grand Palace" title="Новини компанії Гранд Палац")
     figcaption 
         h3 Старт продажу нових черг у grand palace розпочато!11
         ul
