--- a/src/pug/components/panorama.pug
+++ b/src/pug/components/panorama.pug
@@ -9,6 +9,6 @@ section.panorama
           +svg('sun')
     .panorama-slider__items
       .panorama-slider__item.fade.active
-        img.night(src="img/panoramanight.jpg" alt="Grand Palace - панорама на місто Хмельницький вночі")
+        img.night(src="img/panoramanight.jpg" alt="Grand Palace - панорама на місто Хмельницький вночі" title="Чудові краєвиди на місто від Grand Palace в ночі")
       .panorama-slider__item.fade
-        img.day(src="img/panoramaday.jpg" alt="Grand Palace - панорама на місто Хмельницький вдень")
+        img.day(src="img/panoramaday.jpg" alt="Grand Palace - панорама на місто Хмельницький вдень" title="Красивий панорамний вигляд вдень")
