--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,14 +3,24 @@ html(lang="uk")
   head
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="css/styles.css")
     title Grand Palace - сучасне житло у місті Хмельницький
+    meta(name="description" content="")
+    meta(name="keywords" content="")
+    meta(name="author" content="Grand Palace")
+    meta(name="publisher" content="Grand Palace")
+    meta(name="robots" content="index follow")  
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
     link(rel='icon' href='img/favicon.ico')
-
+    link(rel='canonical' href='https://www.grandpalace.km.ua/')
+    meta(property="og:title" content="Grand Palace - сучасне житло у місті Хмельницький")
+    meta(property="og:description" content="")
+    meta(property="og:image" content="../img/logo.jpg")
+    meta(property="og:type" content="website")
+    meta(property="og:url" content="https://www.grandpalace.km.ua/")
 
   body(tabindex="0")
     .body-wrapper
