--- a/src/pug/residential.pug
+++ b/src/pug/residential.pug
@@ -1,31 +1,26 @@
 doctype html
 html(lang="uk")
   head
-    //- Мета-конфігурації
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="../css/styles.css")
-    meta(property="og:url" content="#")
-    link(rel='canonical' href='#') 
-  
-    //- 
+    title Grand Palace - житлова нерухомість у місті Хмельницький
+    meta(name="description" content="Житловий комплекс Grand Palace надасть вам можливість жити, працювати, відпочивати, займатись спортом та іншими повсякденними речами не покидаючи свого житла!")
+    meta(name="keywords" content="купити квартиру в ЖК Grand Palace, Житлова нерухомість в елітному жилому комплексі Гранд палац, купити квартиру в Гранд Палаці")
     meta(name="author" content="Grand Palace")
-    meta(name="publisher" content="Grand Palace")  
-    //- Шрифти
+    meta(name="publisher" content="Grand Palace")
+    meta(name="robots" content="index follow")
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
-    //- Favicon
     link(rel='icon' href='img/favicon.ico')
-    //- Мета опис
-    title Grand Palace - житлова нерухомість у місті Хмельницький
-    meta(name="keywords" content="центр, grand, palace, здоров'я, будівництво, нерухомість, ТРЦ, гранд, палас")
-    meta(name="description" content="Житловий комплекс Grand Palace надасть вам можливість жити, працювати, відпочивати, займатись спортом та іншими повсякденними речами не покидаючи свого житла!")
-    meta(property="og:description" content="Житловий комплекс Grand Palace створить для вас умови, де ви зможете жити, працювати, відпочивати, займатися спортом та виконувати інші повсякденні справи, не залишаючи свого житла.")
+    link(rel='canonical' href='https://www.grandpalace.km.ua/residential.html')
     meta(property="og:title" content="Grand Palace - житлова нерухомість у місті Хмельницький")
+    meta(property="og:description" content="Житловий комплекс Grand Palace створить для вас умови, де ви зможете жити, працювати, відпочивати, займатися спортом та виконувати інші повсякденні справи, не залишаючи свого житла.")
     meta(property="og:image" content="../img/logo.jpg")
     meta(property="og:type" content="website")
+    meta(property="og:url" content="https://www.grandpalace.km.ua/residential.html")
 
   body(tabindex="0")
     .body-wrapper
