--- a/src/pug/ru/components/panorama.pug
+++ b/src/pug/ru/components/panorama.pug
@@ -9,6 +9,6 @@ section.panorama
           +svg('sun')
     .panorama-slider__items
       .panorama-slider__item.fade.active
-        img.night(src="../img/panoramanight.jpg" alt="Grand Palace - панорама на город Хмельницкий ночью")
+        img.night(src="../img/panoramanight.jpg" alt="Grand Palace - панорама на город Хмельницкий ночью" title="Великолепные виды на город от Grand Palace в ночи")
       .panorama-slider__item.fade
-        img.day(src="../img/panoramaday.jpg" alt="Grand Palace - панорама на город Хмельницкий днем")
+        img.day(src="../img/panoramaday.jpg" alt="Grand Palace - панорама на город Хмельницкий днем" title="Красивый панорамный вид днем")
