--- a/src/pug/404.pug
+++ b/src/pug/404.pug
@@ -2,7 +2,13 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title 404 error page not found
-    body 
-    h1 404 error page not found
+        meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
+        title 404 - page not found
+    body(tabindex="0")
+    .body-wrapper
+      include components/vars
+      include components/mixins
+      include components/header
+    main.main
+        h1 404 - Сторінка не знайдена
+    include components/footer
