--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -20,43 +20,19 @@ header.header(itemscope itemtype="http://schema.org/WPHeader")
         a(href='#' data-lang="ru", itemprop='url') Рус
     nav.header__menu(itemscope itemtype="http://schema.org/SiteNavigationElement")
       ul.menu__list
-<<<<<<< HEAD
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
-          a.menu__link(href='residential.html', itemprop='url') 
-            span(itemprop='name') Житлова нерухомість
+          a.menu__link(href='residential.html', itemprop='url') Житлова нерухомість
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
-          a.menu__link(href='commercial.html', itemprop='url') 
-            span(itemprop='name') Комерційна нерухомість
+          a.menu__link(href='commercial.html', itemprop='url') Комерційна нерухомість
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
-          a.menu__link(href= location + "#generalplan", itemprop='url') 
-            span(itemprop='name') Загальний план
+          a.menu__link(href= location + "#generalplan", itemprop='url') Загальний план
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
-          a.menu__link(href= location + "#overview", itemprop='url') 
-            span(itemprop='name') Переваги
+          a.menu__link(href= location + "#overview", itemprop='url') Переваги
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
-          a.menu__link(href= location + "#progress", itemprop='url') 
-            span(itemprop='name') Хід будівництва
+          a.menu__link(href= location + "#progress", itemprop='url') Хід будівництва
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
-          a.menu__link(href= location + "#documentation", itemprop='url') 
-            span(itemprop='name') Документація
+          a.menu__link(href= location + "#documentation", itemprop='url') Документація
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
-          a.menu__link(href='contacts.html', itemprop='url') 
-            span(itemprop='name') Контакти
-=======
-        li
-          a.menu__link(href='residential.html') Житлова нерухомість
-        li
-          a.menu__link(href='commercial.html') Комерційна нерухомість
-        li
-          a.menu__link(href= location + "#generalplan") Загальний план
-        li
-          a.menu__link(href= location + "#overview") Переваги
-        li
-          a.menu__link(href= location + "#progress") Хід будівництва
-        li
-          a.menu__link(href= location + "#documentation") Документація
-        li
-          a.menu__link(href='contacts.html') Контакти
-        li
-          a.menu__link(href='news.html') Новини
->>>>>>> 66082b199b8e25bab424c08df67bcb00a1224362
+          a.menu__link(href='contacts.html', itemprop='url') Контакти
+        li(itemscope itemtype="http://schema.org/SiteNavigationElement")
+          a.menu__link(href='news.html', itemprop='url') Новини
