--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -1,35 +1,27 @@
 doctype html
 html(lang="uk")
   head
-    //- Мета-конфігурації
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="css/styles.css")
-    meta(property="og:url" content="#")
-    link(rel='canonical' href='#') 
-  
-    //- 
+    title Grand Palace - Контактна інформація відділу продажу
+    meta(name="description" content="Контактні данні компанії Grand Palace: Потрібне приміщення під комерційний бізнес? Звертайтесь до Grand Palace і не пошкодуєте!")
+    meta(name="keywords" content="Контакти компанії Grand Palace, відділ продажу квартир Grand Palace, контактна інформація ЖК та ТРЦ Grand Palace")
     meta(name="author" content="Grand Palace")
-    meta(name="publisher" content="Grand Palace")  
-    //- Шрифти
+    meta(name="publisher" content="Grand Palace")
+    meta(name="robots" content="index follow")  
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
-    //- Favicon
     link(rel='icon' href='img/favicon.ico')
-    //- Мета опис
-    title Grand Palace - Контактна інформація, початок зручності
-    meta(name="keywords" content="центр, grand, palace, здоров'я, будівництво, нерухомість, ТРЦ, гранд, палас")
-    meta(name="description" content="Контактні данні компанії Grand Palace: Потрібне приміщення під комерційний бізнес? Звертайтесь до Grand Palace і не пошкодуєте!")
-    meta(property="og:description" content="Шукаєте приміщення під комерційний бізнес? Звертайтесь до Grand Palace!")
-    meta(property="og:title" content="Grand Palace -  Контактна інформація, початок зручності")
+    link(rel='canonical' href='https://www.grandpalace.km.ua/contacts.html')
+    meta(property="og:title" content="Grand Palace - Контактна інформація відділу продажу")
+    meta(property="og:description" content="Контактні данні компанії Grand Palace: Потрібне приміщення під комерційний бізнес? Звертайтесь до Grand Palace і не пошкодуєте!")
     meta(property="og:image" content="img/logo.jpg")
     meta(property="og:type" content="website")
+    meta(property="og:url" content="https://www.grandpalace.km.ua/contacts.html")
    
-
-
-
   body(tabindex="0")
     .body-wrapper
       include components/vars
