--- a/src/pug/one-news.pug
+++ b/src/pug/one-news.pug
@@ -3,13 +3,24 @@ html(lang="uk")
   head
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="css/styles.css")
-    title Grand Palace - сучасне житло у місті Хмельницький
+    title Grand Palace - 
+    meta(name="description" content="")
+    meta(name="keywords" content="")
+    meta(name="author" content="Grand Palace")
+    meta(name="publisher" content="Grand Palace")
+    meta(name="robots" content="index follow")  
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
     link(rel='icon' href='img/favicon.ico')
+    link(rel='canonical' href='https://www.grandpalace.km.ua/one-news.html')
+    meta(property="og:title" content="")
+    meta(property="og:description" content="")
+    meta(property="og:image" content="img/logo.jpg")
+    meta(property="og:type" content="website")
+    meta(property="og:url" content="https://www.grandpalace.km.ua/one-news.html")
 
   body(tabindex="0")
     .body-wrapper
@@ -19,12 +30,12 @@ html(lang="uk")
       main.main.container
         .news-card 
             .news-gallery 
-                img(src="img/news-photo1.jpg", alt="")
+                img(src="img/news-photo1.jpg", alt="новини Grand Palace")
                 .gallery-sm-photoes
                     .photo-slider 
-                        img(src="img/news-photo1.jpg", alt="")
+                        img(src="img/news-photo1.jpg", alt="Останні події в ЖК Гранд Палац")
                     .photo-slider 
-                        img(src="img/news-photo1.jpg", alt="")
+                        img(src="img/news-photo1.jpg", alt="Актуальні відомості від Grand Palace")
             .news-description
                 h1 Старт продажу нових черг у grand palace розпочато!
                 hr
