--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,8 +6,8 @@ html(lang="uk")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="css/styles.css")
     title Grand Palace - сучасне житло у місті Хмельницький
-    meta(name="description" content="")
-    meta(name="keywords" content="")
+    meta(name="description" content="Сучасний елітний житловий комплекс у центрі міста Хмельницький. Grand Palace - гарантія твого зручного проживання з необхідними зручностями для життя.")
+    meta(name="keywords" content="Житловий комплекс Grand Palace, ТРЦ гранд палац продаж нерухомості, комерційні та житлові приміщення у Гранд Палац")
     meta(name="author" content="Grand Palace")
     meta(name="publisher" content="Grand Palace")
     meta(name="robots" content="index follow")  
@@ -17,7 +17,7 @@ html(lang="uk")
     link(rel='icon' href='img/favicon.ico')
     link(rel='canonical' href='https://www.grandpalace.km.ua/')
     meta(property="og:title" content="Grand Palace - сучасне житло у місті Хмельницький")
-    meta(property="og:description" content="")
+    meta(property="og:description" content="Сучасний елітний житловий комплекс у центрі міста Хмельницький. Grand Palace - гарантія твого зручного проживання з необхідними зручностями для життя.")
     meta(property="og:image" content="../img/logo.jpg")
     meta(property="og:type" content="website")
     meta(property="og:url" content="https://www.grandpalace.km.ua/")
