--- a/src/pug/news.pug
+++ b/src/pug/news.pug
@@ -6,8 +6,8 @@ html(lang="uk")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="css/styles.css")
     title Grand Palace - Новини елітного житлового комплексу
-    meta(name="description" content="")
-    meta(name="keywords" content="")
+    meta(name="description" content="Слідкуйте за оновленнями, щоб бути в курсі усіх подій та новин від компанії Гранд Палац! Лише актуальна та свіжа інформація від забудовника.")
+    meta(name="keywords" content="Новини Grand Palace, актуальна інформація по Гранд Палац, список новин та подій Grand Palace")
     meta(name="author" content="Grand Palace")
     meta(name="publisher" content="Grand Palace")
     meta(name="robots" content="index follow")  
@@ -17,7 +17,7 @@ html(lang="uk")
     link(rel='icon' href='img/favicon.ico')
     link(rel='canonical' href='https://www.grandpalace.km.ua/news.html')
     meta(property="og:title" content="Grand Palace - Новини елітного житлового комплексу")
-    meta(property="og:description" content="")
+    meta(property="og:description" content="Слідкуйте за оновленнями, щоб бути в курсі усіх актуальних подій та новин від компанії Гранд Палац! Лише актуальна та свіжа інформація від забудовника.")
     meta(property="og:image" content="img/logo.jpg")
     meta(property="og:type" content="website")
     meta(property="og:url" content="https://www.grandpalace.km.ua/news.html")
