--- a/src/pug/commercial.pug
+++ b/src/pug/commercial.pug
@@ -6,8 +6,8 @@ html(lang="uk")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="css/styles.css")
     title Grand Palace - комерційна нерухомість у місті Хмельницький
-    meta(name="description" content="")
-    meta(name="keywords" content="")
+    meta(name="description" content="Хочете купити офіс або торгове приміщення під бізнес в новобудові? В такому випадку точно варто звернути увагу на Grand Palace.Незважаючи на те, чи то стріт-рітейл, кафе, ресторани, фітнес-центр, чи будь-який бізнес сфери послуг і сервісів, ми допоможемо підібрати ідеальне приміщення під бізнес з урахуванням ваших цілей і завдань.")
+    meta(name="keywords" content="купити приміщення для бізнесу, купити комерційне приміщення в центрі міста, комерційні приміщення від Grand Palace")
     meta(name="author" content="Grand Palace")
     meta(name="publisher" content="Grand Palace")
     meta(name="robots" content="index follow")  
@@ -17,7 +17,7 @@ html(lang="uk")
     link(rel='icon' href='img/favicon.ico')
     link(rel='canonical' href='https://www.grandpalace.km.ua/commercial.html')
     meta(property="og:title" content="Grand Palace - комерційна нерухомість у місті Хмельницький")
-    meta(property="og:description" content="")
+    meta(property="og:description" content="Хочете купити офіс або торгове приміщення під бізнес в новобудові? В такому випадку точно варто звернути увагу на Grand Palace.Незважаючи на те, чи то стріт-рітейл, кафе, ресторани, фітнес-центр, чи будь-який бізнес сфери послуг і сервісів, ми допоможемо підібрати ідеальне приміщення під бізнес з урахуванням ваших цілей і завдань.")
     meta(property="og:image" content="img/logo.jpg")
     meta(property="og:type" content="website")
     meta(property="og:url" content="https://www.grandpalace.km.ua/commercial.html")
