--- a/src/pug/one-news.pug
+++ b/src/pug/one-news.pug
@@ -5,7 +5,7 @@ html(lang="uk")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="css/styles.css")
-    title Grand Palace - 
+    title Grand Palace - старт продажу нової черги
     meta(name="description" content="")
     meta(name="keywords" content="")
     meta(name="author" content="Grand Palace")
@@ -16,7 +16,7 @@ html(lang="uk")
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
     link(rel='icon' href='img/favicon.ico')
     link(rel='canonical' href='https://www.grandpalace.km.ua/one-news.html')
-    meta(property="og:title" content="")
+    meta(property="og:title" content="Grand Palace - старт продажу нової черги")
     meta(property="og:description" content="")
     meta(property="og:image" content="img/logo.jpg")
     meta(property="og:type" content="website")
