--- a/src/pug/ru/contacts.pug
+++ b/src/pug/ru/contacts.pug
@@ -1,29 +1,26 @@
 doctype html
 html(lang="uk")
   head
-    //- Мета-конфігурації
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet" href="../css/styles.css")
-    meta(property="og:url" content="#")
-    link(rel='canonical' href='#') 
-  
-    //- 
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
+    link(rel="stylesheet" href="./css/styles.css")
+    title Grand Palace - Контактная информация, начало удобства
+    meta(name="description" content="Контактные данные компании Grand Palace: Нужно ли помещение под коммерческий бизнес? Обращайтесь в Grand Palace и не пожалеете!")
+    meta(name="keywords" content="Контакты компании Grand Palace, отдел продаж квартир Grand Palace, контактная информация ЖК и ТРЦ Grand Palace")
     meta(name="author" content="Grand Palace")
-    meta(name="publisher" content="Grand Palace")  
-    //- Шрифти
+    meta(name="publisher" content="Grand Palace")
+    meta(name="robots" content="index follow")  
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
-    link(rel='icon' href='../img/favicon.ico')
-    title Grand Palace - Контактная информация, начало удобства
-    meta(name="keywords" content="центр, grand, palace, здоровье, строительство, недвижимость, ТРЦ, гранд, палас")
-    meta(name="description" content="Контактные данные компании Grand Palace: Нужно ли помещение под коммерческий бизнес? Обращайтесь в Grand Palace и не пожалеете!")
-    meta(property="og:description" content="Ищете помещение под коммерческий бизнес? Обращайтесь в Grand Palace!")
-    meta(property="og:title" content="Grand Palace - Контактная информация, начало удобства")
-    meta(property="og:image" content="./img/logo.jpg")
+    link(rel='icon' href='img/favicon.ico')
+    link(rel='canonical' href='https://www.grandpalace.km.ua/contacts.html')
+    meta(property="og:title" content="Grand Palace - Контактная информация отдела продаж")
+    meta(property="og:description" content="Контактные данные компании Grand Palace: Нужно ли помещение под коммерческий бизнес? Обращайтесь в Grand Palace и не пожалеете!")
+    meta(property="og:image" content="img/logo.jpg")
     meta(property="og:type" content="website")
+    meta(property="og:url" content="https://www.grandpalace.km.ua/contacts.html")
    
 
   body(tabindex="0")
