--- a/src/pug/ru/commercial.pug
+++ b/src/pug/ru/commercial.pug
@@ -3,12 +3,24 @@ html(lang="uk")
   head
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title Grand Palace - комерційна нерухомість у місті Хмельницький
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    link(rel="stylesheet" href="/css/styles.css")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
+    link(rel="stylesheet" href="./css/styles.css")
+    title Grand Palace - коммерческая недвижимость в городе Хмельницкий
+    meta(name="description" content="Хотите купить офис или торговое помещение под бизнес в новостройке? В таком случае точно стоит обратить внимание на Grand Palace. Несмотря на то, будь то стрит-ритейл, кафе, рестораны, фитнес-центр или любой бизнес сферы услуг и сервисов, мы поможем подобрать идеальное помещение под бизнес с учетом ваших целей и задач")
+    meta(name="keywords" content="купить помещение для бизнеса, купить коммерческое помещение в центре города, коммерческие помещения от Grand Palace")
+    meta(name="author" content="Grand Palace")
+    meta(name="publisher" content="Grand Palace")
+    meta(name="robots" content="index follow")  
+    link(rel='preconnect' href='https://fonts.googleapis.com')
+    link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
+    link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
+    link(rel='icon' href='img/favicon.ico')
+    link(rel='canonical' href='https://www.grandpalace.km.ua/commercial.html')
+    meta(property="og:title" content="Grand Palace - коммерческая недвижимость в городе Хмельницкий")
+    meta(property="og:description" content="Хотите купить офис или торговое помещение под бизнес в новостройке? В таком случае точно стоит обратить внимание на Grand Palace. Несмотря на то, будь то стрит-ритейл, кафе, рестораны, фитнес-центр или любой бизнес сферы услуг и сервисов, мы поможем подобрать идеальное помещение под бизнес с учетом ваших целей и задач")
+    meta(property="og:image" content="img/logo.jpg")
+    meta(property="og:type" content="website")
+    meta(property="og:url" content="https://www.grandpalace.km.ua/commercial.html")
 
   body(tabindex="0")
     .body-wrapper
