--- a/src/pug/ru/residential.pug
+++ b/src/pug/ru/residential.pug
@@ -1,34 +1,29 @@
 doctype html
 html(lang="uk")
   head
-    //- Мета-конфігурації
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet" href="../css/styles.css")
-    meta(property="og:url" content="#")
-    link(rel='canonical' href='#') 
-
-    //- 
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
+    link(rel="stylesheet" href="./css/styles.css")
+    title Grand Palace - жилая недвижимость в городе Хмельницкий
+    meta(name="description" content="Житловий комплекс Grand Palace надасть вам можливість жити, працювати, відпочивати, займатись спортом та іншими повсякденними речами не покидаючи свого житла!")
+    meta(name="keywords" content="купить квартиру в ЖК Grand Palace, Жилая недвижимость в элитном жилом комплексе Гранд дворец, купить квартиру в Гранд Дворце")
     meta(name="author" content="Grand Palace")
-    meta(name="publisher" content="Grand Palace")  
-    //- Шрифти
+    meta(name="publisher" content="Grand Palace")
+    meta(name="robots" content="index follow")
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
-    //- Favicon
     link(rel='icon' href='img/favicon.ico')
-    //- Мета опис
-    title Grand Palace - жилая недвижимость в городе Хмельницкий
-    meta(name="keywords" content="центр, grand, palace, здоровье, строительство, недвижимость, ТРЦ, гранд, палас")
-    meta(name="description" content="Жилой комплекс Grand Palace предоставит вам возможность жить, работать, отдыхать, заниматься спортом и другими повседневными вещами, не покидая своего жилья!")
-    meta(property="og:description" content="Жилой комплекс Grand Palace создаст вам условия, где вы сможете жить, работать, отдыхать, заниматься спортом и выполнять другие повседневные дела, не покидая своего жилья.")
+    link(rel='canonical' href='https://www.grandpalace.km.ua/residential.html')
     meta(property="og:title" content="Grand Palace - жилая недвижимость в городе Хмельницкий")
-    meta(property="og:image" content="img/logo.jpg")
+    meta(property="og:description" content="Жилой комплекс Grand Palace создаст вам условия, где вы сможете жить, работать, отдыхать, заниматься спортом и выполнять другие повседневные дела, не покидая своего жилья.")
+    meta(property="og:image" content="../img/logo.jpg")
     meta(property="og:type" content="website")
+    meta(property="og:url" content="https://www.grandpalace.km.ua/residential.html")
 
 
-    
+
 
   body(tabindex="0")
     .body-wrapper
