--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -40,8 +40,8 @@ section.hero
   .slider-images 
     img(src="img/hero1_1.webp", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
     img(src="img/hero.jpg", alt="Сучасний ТРЦ Grand Palce")
-    img(src="img/hero2.webp", alt="Зручний паркінг біля ТРЦ Grand Palace", loading="lazy")
-    img(src="img/hero3.webp", alt="Проекція нового ТРЦ Grand Palace", loading="lazy")
-    img(src="img/hero4.webp", alt="Житлові квартири в Grand Palace", loading="lazy")
-    img(src="img/hero5.webp", alt="Загальний план будівництва - вигляд ззовні", loading="lazy")
-    img(src="img/hero6.webp", alt="загальний вигляд Елітного ЖК Grand Palace", loading="lazy")
+    img(src="img/hero2_2.webp", alt="Зручний паркінг біля ТРЦ Grand Palace", loading="lazy")
+    img(src="img/hero3_3.webp", alt="Проекція нового ТРЦ Grand Palace", loading="lazy")
+    img(src="img/hero4_4.webp", alt="Житлові квартири в Grand Palace", loading="lazy")
+    img(src="img/hero5_5.webp", alt="Загальний план будівництва - вигляд ззовні", loading="lazy")
+    img(src="img/hero6_6.webp", alt="загальний вигляд Елітного ЖК Grand Palace", loading="lazy")
